--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 getrandom = { version = "0.4", features = ["wasm_js"] }
 web-time = "1.1"
+web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }
