--- a/Trunk.toml
+++ b/Trunk.toml
@@ -5,7 +5,8 @@ dist = "dist"
 [build.subresource_integrity]
 enabled = true
 
+
 [[hooks]]
 stage = "pre_build"
-command = "npx"
-command_arguments = ["-y", "tailwindcss@3", "-i", "./input.css", "-o", "./tailwind.css"]
+command = "./node_modules/.bin/tailwindcss"
+command_arguments = ["-i", "./input.css", "-o", "./tailwind.css"]
